--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "node": ">=8.13"
   },
+  "private": true,
   "scripts": {
     "build": "del dist && tsc",
     "prepare": "npm run build",
